# Django_Product_API

./: .gitignore  README.md  pyproject.toml
cities_project/: manage.py
cities_project/api/: models.py  serializers.py  tests.py  urls.py  views.py
cities_project/api/migrations/: 0001_initial.py  0002_alter_photolink_photo_link.py  0003_remove_photolink_is_related_to_city.py
cities_project/cities_project/: asgi.py  settings.py  urls.py  wsgi.py
